--- a/source/case_studies/savetv.html.slim
+++ b/source/case_studies/savetv.html.slim
@@ -3,7 +3,7 @@
     |Omniga Save-TV
   p
     |Die Omniga GmbH zählt zu den größten IT-Unternehmen in Regensburg. Eines ihrer vielen Produkte ist Save.TV. Dieses bietet den Nutzern die Möglichkeit, einfach und bequem Sendungen im deutschen Fernsehen aufzunehmen, um sie später jederzeit anzusehen.
-  
+
   h2 Die Herausforderung
   p
     |Save.TV wurde für die mobilen Plattformen von verschiedenen Entwicklerteams geschaffen. Für die Beratung und Entwicklung neuer Funktionen und der Wartung der bereits bestehenden iOS-Anwendung wurde eine Agentur für eine langfristige Zusammenarbeit gesucht. Wichtig war, dass neue Technologien verwendet werden, um beispielsweise auch eine App für das Apple TV zu schaffen und die Wartung in Zukunft einfach zu halten.
@@ -19,8 +19,8 @@
     |Egal ob auf der Rückbank im Auto, im Zug oder im Bus. Save.TV sieht unterwegs auf dem iPhone einfach gut aus. Aber natürlich wissen wir, dass nicht jeder Nutzer gerne auf dem iPhone fernsieht. Viele bevorzugen den größeren Bildschirm des iPads. Die App ist für das iPad die gleiche, nur das Design ist optimiert. Die Save.TV iOS-App hat ein eigenes Design auf dem iPad, um das Mehr an Platz optimal zu nutzen.
   .center class="uk-width-1-2@s uk-width-1-1@xs"
     = image_tag "iPad_iPhone.png"
-  
-  
+
+
   h3
     |Aus der Tasche ins Wohnzimmer - die Save.TV App für das Apple TV
   p
@@ -31,14 +31,12 @@
   h3
     |In-App-Purchase und Probeversionen - probieren statt studieren
   p
-    |Um die Angebotsvielfalt von Save.TV im vollen Zügen zu genießen, wird ein Abonnement benötigt. Dieses kann bequem in der iOS- oder tvOS-App abgeschlossen werden.
-    | Über die Save.TV-Webseite können Interessenten schon lange ein Probeabo für zwei Wochen abschließen. Als Apple auch auf ihren Plattformen Probeabos in In-App-Purchases integrierte, wurde dieses Feature innerhalb kürzester Zeit auch auf iOS und tvOS nachgezogen.
-    | Es war noch nie so einfach Save.TV-Nutzer zu werden. Von der Accounterstellung, dem In-App-Purchase eines Abonnements und dem Durchstarten in den kostenlose Probezeitraum - alles innerhalb weniger Schritte in der App.
-  
+    |Um die Angebotsvielfalt von Save.TV im vollen Zügen zu genießen, wird ein Abonnement benötigt. Dieses kann bequem in der iOS- oder tvOS-App abgeschlossen werden. Über die Save.TV-Webseite können Interessenten schon lange ein Probeabo für zwei Wochen abschließen. Als Apple auch auf ihren Plattformen Probeabos in In-App-Purchases integrierte, wurde dieses Feature innerhalb kürzester Zeit auch auf iOS und tvOS nachgezogen. Es war noch nie so einfach Save.TV-Nutzer zu werden. Von der Accounterstellung, dem In-App-Purchase eines Abonnements und dem Durchstarten in den kostenlose Probezeitraum - alles innerhalb weniger Schritte in der App.
+
   h3
     |Kein Apple TV? Kein Problem!
   p
-    |Dass Save.TV zum Apple TV passt, ist klar. Dass aber nicht jeder einen Apple TV im Wohnzimmer stehen hat, auch. Aufgrund der guten Ergebnisse aus der Zusammenarbeit, erhielt Number42 deswegen die Beauftragung, Save.TV auch für alle gängigen Smart-TV-Plattformen zu implementieren. Es wurde eine Hybrid App entwickelt, um für möglichst viele Smart-TVs eine App anbieten zu können. Eine gemeinsame Code-Basis erlaubt es, Apps für Samsung-SmartTVs,  AndroidTVs, sowie für den beliebten FireTV von Amazon zu veröffentlichen. Programmiert wurde diese App mit ember.js, einem bekannten und sehr performanten Web-Framework, auf das Number42 seit Jahren setzt. Die Apps erstrahlen in einem eigenen Design, inspiriert von aktuellen SmartTV Design Guidelines. Für die Apps wurde eine eigene Focus Engine entwickelt, die dafür sorgt, dass die Navigation innerhalb der App auf allen Geräten konsistent und performant ist.
+    |Dass Save.TV zum Apple TV passt, ist klar. Dass aber nicht jeder einen Apple TV im Wohnzimmer stehen hat, auch. Aufgrund der guten Ergebnisse aus der Zusammenarbeit, erhielt Number42 deswegen die Beauftragung, Save.TV auch für alle gängigen Smart-TV-Plattformen zu implementieren. Es wurde eine Hybrid App entwickelt, um für möglichst viele Smart-TVs eine App anbieten zu können. Eine gemeinsame Code-Basis erlaubt es, Apps für Samsung-SmartTVs,  AndroidTVs, sowie für den beliebten FireTV von Amazon zu veröffentlichen. Programmiert wurde diese App mit Ember.js, einem bekannten und sehr performanten Web-Framework, auf das Number42 seit Jahren setzt. Die Apps erstrahlen in einem eigenen Design, inspiriert von aktuellen SmartTV Design Guidelines. Für die Apps wurde eine eigene Focus Engine entwickelt, die dafür sorgt, dass die Navigation innerhalb der App auf allen Geräten konsistent und performant ist.
 
   .center class="uk-width-1-2@s uk-width-1-1@xs"
     = image_tag "SaveTV_smart_tv.png"
