--- a/source/layouts/article_layout.slim
+++ b/source/layouts/article_layout.slim
@@ -9,6 +9,7 @@
 
     div.uk-section
       div.uk-container.uk-container-small
+        h2.uk-text-center.uk-margin-large-bottom more Number42 tales
         div.uk-grid-match uk-grid=''
           / - blog.articles[0...3].each do |article|
           - randomArticles(blog.articles, current_article).each do |article|
@@ -23,11 +24,13 @@
                     p.uk-margin-remove-bottom = article.date.strftime('%b %e, %Y')
 
           div class="uk-width-1-3@s uk-width-1-1"
-            a href="#"
+            a href="/#kontakt"
               div.n42-article-card
-                  div.uk-cover-container
+                  / div style="background-color: #f5f4f0;"
+                  /   img src="/images/42.svg" style="max-height: 135px; padding: 5px 0 5px 0;"
+                  div.uk-cover-container style="background-color: #f5f4f0;"
                     canvas width="300" height="150"
-                    img src="/images/42.svg" uk-cover=''
+                    img src="/images/42.svg" uk-cover='' style="max-height: 135px; padding: 5px 0 5px 0;"
+
                   div.n42-card-body
-                    h3.uk-margin-small-top if you are interested build stuff contact us
-                    p.uk-margin-remove-bottom info@num.de
+                    h3.uk-margin-small-top Wenn wir Ihr Interesse geweckt haben, können Sie uns jederzeit Ihre Fragen stellen.
