Add Open Source Content

--- a/source/referenzen.html.slim
+++ b/source/referenzen.html.slim
@@ -176,3 +176,24 @@ section.uk-section.n42-section-border
 
       div.uk-container.uk-container-small.n42-container.uk-width-1-1 uk-scrollspy="cls: uk-animation-fade; repeat: true"
         =image_tag "images/ratisbona_min.png"
+
+section.uk-section.uk-section-muted.n42-section-border
+  div.uk-container.uk-container-small.n42-container
+    /medium+large devices
+    div.uk-grid class="uk-visible@s"
+      div.uk-width-1-1 uk-scrollspy="cls: uk-animation-slide-left;"
+        div.uk-text-left
+          h2 Open Source
+          p
+            | Open Source ist seit Beginn an bei Number42 ein wichtiger und fester Bestandteil unserer Entwicklerkultur. Die Vorteile von Open Source Software ergeben sich aus der kollektiven Weiterentwicklung der Software durch die Gemeinschaft.
+          a href="/contents/opensource.html"
+            button.uk-button.uk-button-primary.uk-margin.uk-button-large Mehr erfahren
+
+    div class="uk-hidden@s"
+      div.uk-width-1-1 uk-scrollspy="cls: uk-animation-fade; repeat: true"
+        div.uk-text-left
+          h2 Open Source
+          p
+            | Open Source ist seit Beginn an bei Number42 ein wichtiger und fester Bestandteil unserer Entwicklerkultur. Die Vorteile von Open Source Software ergeben sich aus der kollektiven Weiterentwicklung der Software durch die Gemeinschaft.
+          a href="/contents/opensource.html"
+            button.uk-button.uk-button-primary.uk-margin.uk-button-large Mehr erfahren
