--- a/source/layouts/article_layout.slim
+++ b/source/layouts/article_layout.slim
@@ -1,13 +1,14 @@
 = wrap_layout :layout do
     = partial "nav"
-    div.uk-container.uk-margin-top.uk-margin-bottom
-      div.uk-flex-center uk-grid=''
-        div.n42-article class="uk-width-2-3@l uk-width-3-4@m uk-width-4-5@s uk-width-1-1"
-          =link_to 'back to overview', '/blog/index.html'
-          div.uk-margin-medium-bottom
-          = yield
+    div.uk-section.n42-section-border
+      div.uk-container.uk-margin-top.uk-margin-bottom
+        div.uk-flex-center uk-grid=''
+          div.n42-article class="uk-width-2-3@l uk-width-3-4@m uk-width-4-5@s uk-width-1-1"
+            =link_to 'back to overview', '/blog/index.html'
+            div.uk-margin-medium-bottom
+            = yield
 
-    div.uk-section.uk-section-muted.uk-margin-large-top
+    div.uk-section.uk-section-muted.n42-section-border
       div.uk-container.uk-container-small
         h2.uk-margin-large-bottom Other interesting articles
         div.uk-grid-match uk-grid=''
@@ -31,5 +32,5 @@
           /
           /       div.n42-card-body
           /         h3.uk-margin-small-top Wenn wir Ihr Interesse geweckt haben, können Sie uns jederzeit Ihre Fragen stellen.
-    div.uk-section
+    div.uk-section.n42-section-border
       h2.uk-text-center.uk-margin-large-bottom get in contact
