--- a/source/layouts/article_layout.slim
+++ b/source/layouts/article_layout.slim
@@ -10,11 +10,11 @@
 
     div.uk-section.uk-section-muted.n42-section-border
       div.uk-container.uk-container-small
-        h2.uk-margin-large-bottom Other interesting articles
+        h2.uk-margin-large-bottom you might also want to read
         div.uk-grid-match uk-grid=''
           - randomArticles(blog.articles, current_article).each do |article|
             div class="uk-width-1-3@s uk-width-1-1"
-              = link_to article do
+              = link_to article, :class =>"n42-no-underline" do
                 div.n42-article-card
                   div.uk-cover-container
                     canvas width="300" height="150"
@@ -23,14 +23,13 @@
                     h3.uk-margin-small-top = truncate(article.title, :length => 50)
                     p.uk-margin-remove-bottom = article.date.strftime('%b %e, %Y')
 
-          / div class="uk-width-1-3@s uk-width-1-1"
-          /   a href="/#kontakt"
-          /     div.n42-article-card
-          /       div.uk-cover-container style="background-color: #f5f4f0;"
-          /         canvas width="300" height="150"
-          /         img src="/images/42.svg" uk-cover='' style="max-height: 135px; padding: 5px 0 5px 0;"
-          /
-          /       div.n42-card-body
-          /         h3.uk-margin-small-top Wenn wir Ihr Interesse geweckt haben, können Sie uns jederzeit Ihre Fragen stellen.
-    div.uk-section.n42-section-border
-      h2.uk-text-center.uk-margin-large-bottom get in contact
+
+    div.uk-section.n42-section-border.uk-text-center
+      div.uk-container
+        h2 Get in touch
+        p Discuss the article or consult us for a project of your own.
+        p
+          span.contact.uk-margin-small-bottom.n42-text-red uk-icon="icon: mail; ratio:2"
+          br
+          a href="mailto:info@num42.de" style="color: #D24335;"
+            |info@num42.de
