--- a/source/layouts/article_layout.slim
+++ b/source/layouts/article_layout.slim
@@ -18,13 +18,13 @@
                 div.n42-article-card
                   div.uk-cover-container
                     canvas width="300" height="150"
-                    img src="/blog/articles/#{article.data['preview_image']}" uk-cover=''
+                    img src="/#{article.data['preview_image']}" uk-cover=''
                   div.n42-card-body
                     h3.uk-margin-small-top = truncate(article.title, :length => 50)
                     p.uk-margin-remove-bottom = article.date.strftime('%b %e, %Y')
 
 
-    div.uk-section.n42-section-border.uk-text-center
+    div.uk-section.n42-section-border.uk-text-center.n42-call-to-action
       div.uk-container
         h2 Get in touch
         p Discuss the article or consult us for a project of your own.
