--- a/source/layouts/article_layout.slim
+++ b/source/layouts/article_layout.slim
@@ -10,7 +10,7 @@
 
     div.uk-section.uk-section-muted.n42-section-border
       div.uk-container.uk-container-small
-        h2.uk-margin-large-bottom you might also want to read
+        h2.uk-margin-large-bottom You might also want to read
         div.uk-grid-match uk-grid=''
           - randomArticles(blog.articles, current_article).each do |article|
             div class="uk-width-1-3@s uk-width-1-1"
@@ -27,7 +27,7 @@
     div.uk-section.n42-section-border.uk-text-center.n42-call-to-action
       div.uk-container
         h2 Get in touch
-        p Discuss the article or consult us for a project of your own.
+        p If you have any questions about the article, need some help or just want to talk to us, contact us at:
         p
           span.contact.uk-margin-small-bottom.n42-text-red uk-icon="icon: mail; ratio:2"
           br
