quickfix nbsp headline

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -61,7 +61,7 @@ div.uk-cover-container.n42-height-large.n42-red-border.n42-hero
   div#cover
     div.uk-overlay.uk-light.n42-text-shadow-light.n42-hero-text
       h1.noselect
-        | Die Antwort auf
+        | Die Antwort auf&nbsp;
         br class="uk-hidden@s"
         |Ihre App-Idee.
       h1
