quickfix nbsp headline

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -65,7 +65,7 @@ div.uk-cover-container.n42-height-large.n42-red-border.n42-hero
         br class="uk-hidden@s"
         |Ihre App-Idee.
       h1
-        | Mit Beratung
+        | Mit Beratung&nbsp;
         br class="uk-hidden@s"
         | zum Erfolg.
 div.uk-section#leistungen.n42-section-border
