--- a/source/_nav.html.slim
+++ b/source/_nav.html.slim
@@ -9,11 +9,9 @@ nav.uk-navbar.uk-navbar-container.n42-navbar uk-navbar='' uk-sticky=''
   div.uk-navbar-right class="uk-visible@m"
     ul.uk-nav.uk-navbar-nav#nav
       li
-        = link_to 'Leistungen', "/#leistungen"
+        = link_to "Home", "/"
       li
-        = link_to 'Team', "/#team"
-      li
-        = link_to '42Stacks', "/#stacks"
+        = link_to "Arbeitsweise", "/arbeitsweise.html"
       li
         = link_to "Referenzen", "/referenzen.html"
       li
@@ -27,11 +25,9 @@ nav.uk-navbar.uk-navbar-container.n42-navbar uk-navbar='' uk-sticky=''
   .uk-offcanvas-bar
     ul.uk-nav.uk-nav-default.collapsable#nav
       li
-        = link_to 'Leistungen', "/#leistungen"
+        = link_to "Home", "/"
       li
-        = link_to 'Team', "/#team"
-      li
-        = link_to '42Stacks', "/#stacks"
+        = link_to "Arbeitsweise", "/arbeitsweise.html"
       li
         = link_to "Referenzen", "/referenzen.html"
       li
