--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -35,4 +35,4 @@ html lang="en" prefix="og: http://ogp.me/ns#"
               |&nbsp;|&nbsp;
               = link_to "Datenschutzerklärung", "/privacy.html"
               br
-              | Made with <span uk-icon="icon: heart; ratio: 0.7"></span> in Bavaria
+              | Made with <span uk-icon="icon: heart; ratio: 0.7"></span> in Regensburg
