--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -3,106 +3,44 @@ title: Number42
 #open graph metadata for facebook
 preview_url: ""
 preview_type: "website"
-preview_description: "Wir sind Entwickler aus Leidenschaft. Für uns ist die Entwicklung von Web- und Mobile-Anwendungen nicht nur unser Beruf, sondern unsere Berufung. Wenn wir zusammen Ihre Idee entwicklen fühlen wir uns wie Erfinder, wenn wir dabei mit den neuesten Technologien programmieren wie Ingenieure und wenn wir Ihrem Produkt ein unverkennbares Design verpassen wie Künstler. Wir begleiten Sie von der ersten Idee bis zur Veröffentlichung. Wir sind nicht nur irgendeine Agentur, wir machen Ihr Produkt einzigartig."
+preview_description: "TODO"
 preview_image: images/cover_l.jpg
 ---
 
-nav.uk-navbar.uk-navbar-container.n42-navbar uk-navbar='' uk-sticky=''
-  div.uk-navbar-left
-    = link_to 'index.html', class:'uk-navbar-item uk-logo' do
-      = image_tag 'logo.svg', style:'width: 120px'
-
-  div.uk-navbar-right class="uk-hidden@m"
-    a class="uk-navbar-toggle uk-navbar-toggle-icon" uk-toggle="" uk-navbar-toggle-icon=true href="#offcanvas-slide"
-
-  div.uk-navbar-right class="uk-visible@m"
-    ul.uk-nav.uk-navbar-nav#nav
-      li
-        a href="#leistungen" uk-scroll='duration: 200; offset: 50'
-          | Leistungen
-      li
-        a href="#team" uk-scroll='duration: 250; offset: 50'
-          | Team
-      li
-        a href="#stacks" uk-scroll='duration: 300; offset: 50'
-          | 42Stacks
-      li
-        = link_to "Referenzen", "/referenzen.html"
-      li
-        = link_to "Jobs", "jobs.html"
-      li
-        = link_to "Blog", "/blog/index.html"
-      li
-        a href="#kontakt" uk-scroll='duration: 350; offset: 50'
-          | Kontakt
-#offcanvas-slide uk-offcanvas="overlay: true; flip: true;"
-  .uk-offcanvas-bar
-    ul.uk-nav.uk-nav-default.collapsable#nav
-      li
-        a href="#leistungen" uk-scroll='duration: 200; offset: 50'
-          | Leistungen
-      li
-        a href="#team" uk-scroll='duration: 250; offset: 50'
-          | Team
-      li
-        a href="#stacks" uk-scroll='duration: 300; offset: 50'
-          | 42Stacks
-      li
-        = link_to "Referenzen", "/referenzen.html"
-      li
-        = link_to "Jobs", "jobs.html"
-      li
-        = link_to "Blog", "/blog/index.html"
-      li
-        a href="#kontakt" uk-scroll='duration: 350; offset: 50'
-          | Kontakt
+= partial 'nav'
 
 div.uk-cover-container.n42-height-large.n42-red-border.n42-hero
   div#cover
     div.uk-overlay.uk-light.n42-text-shadow-light.n42-hero-text
+      h1.lead.noselect
+        | Appentwicklung 
+        br 
       h1.noselect
-        | Die Antwort auf&nbsp;
-        br class="uk-hidden@s"
-        |Ihre App-Idee.
-      h1
-        | Mit Beratung&nbsp;
-        br class="uk-hidden@s"
-        | zum Erfolg.
+        | aus Regensburg
 div.uk-section#leistungen.n42-section-border
   div.uk-container
-    div (class="uk-child-width-1-1 uk-child-width-1-3@m uk-grid uk-text-center uk-flex-around" uk-grid)
+    div.space-xl  (class="uk-child-width-1-1 uk-child-width-1-3@m uk-grid uk-text-center uk-flex-around" uk-grid)
       div
-
         img.icon_quick_fix src="images/icon_bubbles_marks.svg"
         h2 Beratung
         p
           | Sie haben eine Idee für eine App, aber brauchen noch das technische Know-how? Wir helfen Ihnen.
-        div class="uk-hidden@m"
-          a href="#beratung" uk-scroll='duration: 200; offset: 50'
-            button.uk-button.uk-button-primary.uk-margin.uk-button-large Mehr erfahren
+        
       div
         img.icon_quick_fix src="images/icon_mobile.svg"
         h2 Mobile Entwicklung
         p
           | Einfach bedienbar, ständig verfügbar und optimal auf den Nutzer abgestimmt. Egal ob für Smartphone oder Tablet, iOS oder Android, wir wissen, was Apps ausmacht – und setzen das auch um.
-        div class="uk-hidden@m"
-          a href="#entwicklung" uk-scroll='duration: 200; offset: 50'
-            button.uk-button.uk-button-primary.uk-margin.uk-button-large Mehr erfahren
+        
       div
         img.icon_quick_fix src="images/icon_web.svg"
         h2 Web Entwicklung
         p
           | Ob Webanwendungen mit durchdachter Usability, responsive Webseiten oder komplexe Backend-Systeme, wir finden für Sie genau die Lösung, die Sie brauchen.
-        div class="uk-hidden@m"
-          a href="#entwicklung" uk-scroll='duration: 200; offset: 50'
-            button.uk-button.uk-button-primary.uk-margin.uk-button-large Mehr erfahren
-    div.mt0 (class="uk-child-width-1-1 uk-child-width-1-3@m uk-grid uk-text-center uk-flex-around uk-visible@m" )
-      a href="#beratung" uk-scroll='duration: 200; offset: 50'
-        button.uk-button.uk-button-primary.uk-margin.uk-button-large Mehr erfahren
-      a href="#entwicklung" uk-scroll='duration: 200; offset: 50'
-        button.uk-button.uk-button-primary.uk-margin.uk-button-large Mehr erfahren
-      a href="#entwicklung" uk-scroll='duration: 200; offset: 50'
-        button.uk-button.uk-button-primary.uk-margin.uk-button-large Mehr erfahren
+        
+    div.uk-child-width-1-1.uk-text-center
+      a href="arbeitsweise.html"
+        button.uk-button.uk-button-primary.uk-margin.uk-button-large so arbeiten wir
 
 div.uk-section.uk-section-muted#team.n42-section-border
   div.uk-container
@@ -206,27 +144,6 @@ div.uk-section.uk-section-muted#team.n42-section-border
       |  Wir begleiten Sie von der ersten Idee bis zur Veröffentlichung.
       |  Wir verstehen uns als Teil Ihres Teams und nicht als externer Partner, der nur blind Aufgaben abarbeitet. Nur so klappt die Entwicklung digitaler Produkte.
 
-div.uk-section#beratung.n42-section-border
-  .uk-container.uk-text-center
-    h1 Beratung
-    p.space-xl Wir kennen die gängigen Probleme bei der Umsetzung von digitalen Produkten. Es werden häufig umfassende Konzepte an uns herangetragen, die einer großen Vision entsprechen. Dass die technische Machbarkeit, das Budget und die Realisierungszeit den Projekterfolg stark beeinflussen, wird dabei oft außer Acht gelassen. Wir unterstützen Sie bereits bei der Analyse der Problemstellung dabei, die technische Machbarkeit von Anfang an in das Produkt einfließen zu lassen.
-
-
-    .uk-grid (class="uk-child-width-1-1 uk-child-width-1-3@m")
-      div
-        h2 Warum?
-        p.uk-margin-large-bottom Sie und Ihre Idee stehen weiterhin im Mittelpunkt. Unsere Aufgabe ist es, Ihnen mit unserem technischen Verständnis unter die Arme zu greifen und so in kürzester Zeit das Beste aus Ihrer Idee zu machen.
-
-      div
-        h2 Wann?
-        p.uk-margin-large-bottom Der beste Zeitpunkt um mit uns zu sprechen ist bereits bei der Problemstellung und nicht erst wenn es um eine Umsetzung geht. So können wir gemeinsam mit Ihnen an Ihrem Produkt feilen und die beste Möglichkeit ausarbeiten.
-
-      div
-        h2 Wie?
-        p.uk-margin-large-bottom Wir erarbeiten gemeinsam mit Ihnen in Workshops Ihr Produktkonzept. Das Konzept besteht aus einer groben Produkt-Roadmap, die in möglichst kleinen Schritten nutzbare Zwischenergebnisse liefert. Darüber hinaus entstehen erste Entwürfe der Bedienoberflächen des Produktes als Grundlage für ein gemeinsames Produkt-Verständnis.
-        / Natürlich soll Ihre App am besten alles können. Besser ist es aber zunächst in kleinen Schritten Funktionen hinzuzufügen. So kann schnell ein erstes funktionsfähiges Produkt enstehen, welches dann an die Bedürfnisse der Nutzer angepasst werden kann.
-
-
 div.uk-section.uk-section-muted#entwicklung.n42-section-border
   div.uk-container
     h1.uk-text-center.uk-margin-medium-bottom Entwicklung
@@ -262,7 +179,7 @@ div.uk-section.uk-text-center.n42-section-border
       div
         i.ion-social-apple-outline.n42-icons
         h2.uk-margin-remove-top iOS
-        p.uk-margin-large-bottom Apple-Geräte versorgen wir mit nativen und hybriden iOS-Apps in Objective-C, Swift und HTML.
+        p.uk-margin-large-bottom TODO Apple-Geräte versorgen wir mit nativen und hybriden iOS-Apps in Swift und HTML.
 
       div
         i.icon.ion-social-android-outline.n42-icons
