add social media

--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -30,9 +30,19 @@ html lang="en" prefix="og: http://ogp.me/ns#"
       footer.n42-footer
         div.uk-section.uk-text-center.uk-section-muted
          div.uk-container.uk-margin-top
+            h1
+              span.uk-padding-small
+                a href='https://twitter.com/Number42Apps' target="_blank"
+                  i.icon.ion-social-twitter-outline
+              span.uk-padding-small
+                a href='https://www.facebook.com/number42de/' target="_blank"
+                  i.icon.ion-social-facebook-outline
+          
+
             p
               = link_to "Impressum", "/imprint.html"
               |&nbsp;|&nbsp;
               = link_to "Datenschutzerklärung", "/privacy.html"
               br
               | Made with <span uk-icon="icon: heart; ratio: 0.7"></span> in Regensburg
+            
