buzzwords, buzzwords everywhere

--- a/source/arbeitsweise.html.slim
+++ b/source/arbeitsweise.html.slim
@@ -7,22 +7,46 @@ preview_description: TechBase, c/o Number42, 93053 Regensburg
 
 = partial 'nav'
 
-div.uk-section#beratung.n42-section-border
-  .uk-container.uk-text-center
-    h1 Beratung
-    p.space-xl Wir kennen die gängigen Probleme bei der Umsetzung von digitalen Produkten. Es werden häufig umfassende Konzepte an uns herangetragen, die einer großen Vision entsprechen. Dass die technische Machbarkeit, das Budget und die Realisierungszeit den Projekterfolg stark beeinflussen, wird dabei oft außer Acht gelassen. Wir unterstützen Sie bereits bei der Analyse der Problemstellung dabei, die technische Machbarkeit von Anfang an in das Produkt einfließen zu lassen.
+div.uk-section.n42-section-border
+  .uk-container.uk-container-small
+    
+    h1
+      |Der Weg zu Ihrem Produkt
+    p 
+      |Als Agentur mit langjähriger Erfahrung kennen wir die gängigen Probleme bei der Umsetzung von mobilen und webbasierten Apps. Es werden häufig umfassende Konzepte an uns herangetragen, die einer großen Vision entsprechen. Dass die technische Machbarkeit, das Budget und die Realisierungszeit den Projekterfolg stark beeinflussen, wird dabei oft außer Acht gelassen. Wir unterstützen Sie bereits bei der Analyse der Problemstellung dabei, die technische Machbarkeit von Anfang an in das Produkt einfließen zu lassen. Bei der Zusammenarbeit mit uns können Sie auf folgende Punkte setzen.
+    ul  
+      li Gemeinsame Workshops
+      li Minimum Viable Product
+      li Agile Arbeitsweise
+      li Zeitbudgets statt Meilensteine
 
-
-    .uk-grid (class="uk-child-width-1-1 uk-child-width-1-3@m")
+  .uk-container#workshops.uk-container-small
+    div.uk-grid.uk-flex.uk-flex-middle class="uk-child-width-1-2@s uk-child-width-1-1"
       div
-        h2 Warum?
-        p.uk-margin-large-bottom Sie und Ihre Idee stehen weiterhin im Mittelpunkt. Unsere Aufgabe ist es, Ihnen mit unserem technischen Verständnis unter die Arme zu greifen und so in kürzester Zeit das Beste aus Ihrer Idee zu machen.
+        h2 Gemeinsame Workshops
+        p Wir erarbeiten zusammen mit Ihnen ihr Konzept entweder in unserem Regensburger Büro oder bei Ihnen vor Ort. Das Konzept besteht aus einer groben Produkt-Roadmap, die in möglichst kleinen Schritten nutzbare Zwischenergebnisse, das Minimum Viable Product, liefert. Darüber hinaus entstehen erste Entwürfe der Bedienoberflächen des Produktes als Grundlage für ein gemeinsames Produkt-Verständnis.
+      div.uk-padding
+        =image_tag "images/DELETEME.svg"
 
+  .uk-container.uk-container-small
+    div.uk-grid.uk-flex.uk-flex-middle class="uk-child-width-1-2@s uk-child-width-1-1"
       div
-        h2 Wann?
-        p.uk-margin-large-bottom Der beste Zeitpunkt um mit uns zu sprechen ist bereits bei der Problemstellung und nicht erst wenn es um eine Umsetzung geht. So können wir gemeinsam mit Ihnen an Ihrem Produkt feilen und die beste Möglichkeit ausarbeiten.
-
+        h2 Minimum Viable Product
+        p Braucht es wirklich eine fertige App oder reicht für Ihren Anwendungsfall vielleicht auch ein Prototyp? Müssen schon alle Funktionen enthalten sein, oder darf es auch ein bisschen weniger sein? Und dann vielleicht noch ein bisschen weniger? Das beschreibt grob das Konzept Minimum Viable Produkt. Es geht darum, ein Produkt zu veröffentlichen, aber nur mit einem minimalen Umfang an Funktionalität. Oft können Sie so schon schnell erkennen, ob Ihr Produkt am Markt ankommt und was verändert werden muss. So sparen Sie sich unnötige Kosten. Features können dann jeder Zeit in Iterationen nachgezogen werden
+      div.uk-padding
+        =image_tag "images/DELETEME.svg"
+        
+  .uk-container.uk-container-small
+    div.uk-grid.uk-flex.uk-flex-middle class="uk-child-width-1-2@s uk-child-width-1-1"
       div
-        h2 Wie?
-        p.uk-margin-large-bottom Wir erarbeiten gemeinsam mit Ihnen in Workshops Ihr Produktkonzept. Das Konzept besteht aus einer groben Produkt-Roadmap, die in möglichst kleinen Schritten nutzbare Zwischenergebnisse liefert. Darüber hinaus entstehen erste Entwürfe der Bedienoberflächen des Produktes als Grundlage für ein gemeinsames Produkt-Verständnis.
-        / Natürlich soll Ihre App am besten alles können. Besser ist es aber zunächst in kleinen Schritten Funktionen hinzuzufügen. So kann schnell ein erstes funktionsfähiges Produkt enstehen, welches dann an die Bedürfnisse der Nutzer angepasst werden kann.
+        h2 Agile Arbeitsweise
+        p Wir verstehen Agile Entwicklung nicht als festes Konzept wie Scrum oder Kanban. Wir verstehen es als dynamischen und ausgeglichenen Zyklus aus Bauen, Messen und Lernen. Das Bauen steht hierbei für die Implementierung der App. Das Messen beschreibt das Testen, Auswerten und Analysieren des aktuellen Stands. Das Lernen schließt den Kreis, indem die gesammelten Erfahrungen und identifizierten Probleme im Team besprochen und gegebenenfalls für den nächsten Zyklus mit eingebracht werden.
+      div.uk-padding
+        =image_tag "images/DELETEME.svg"
+  .uk-container.uk-container-small
+    div.uk-grid.uk-flex.uk-flex-middle class="uk-child-width-1-2@s uk-child-width-1-1"
+      div
+        h2 Zeitbudgets statt Meilensteine
+        p Für uns hat sich über die Jahre bewährt nicht mit Meilensteinen zu arbeiten sondern mit Zeitbudgets. Meilensteine mit fest definierten Produktumfang sind nicht agil. Verschätzt man sich mit dem Aufwand verschiebt sich der Release oft nach hinten, was weitere Konsequenzen mit sich zieht. Bei der Planung des Projektablaufs setzen wir daher auf Zeitbudgets. In Kombination mit dem Minimum Viable Product können wir so garantieren, dass mit jeder Iteration der Wert und Umfang ihrer App steigt. Funktionalitäten, die innerhalb des Zeitbudgets implementiert und getestet werden, gelangen dabei in nächsten planmäßigen Release.
+      div.uk-padding
+        =image_tag "images/DELETEME.svg"
