--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -13,10 +13,10 @@ div.uk-cover-container.n42-height-large.n42-red-border.n42-hero
   div#cover
     div.uk-overlay.uk-light.n42-text-shadow-light.n42-hero-text
       h1.lead.noselect
-        | Appentwicklung 
+        | Digitale Innovation
         br 
       h1.noselect
-        | aus Regensburg
+        | beginnt auf dem Papier
 div.uk-section#leistungen.n42-section-border
   div.uk-container
     div.space-xl  (class="uk-child-width-1-1 uk-child-width-1-3@m uk-grid uk-text-center uk-flex-around" uk-grid)
@@ -24,7 +24,7 @@ div.uk-section#leistungen.n42-section-border
         img.icon_quick_fix src="images/icon_bubbles_marks.svg"
         h2 Beratung
         p
-          | Sie haben eine Idee für eine App, aber brauchen noch das technische Know-how? Wir helfen Ihnen.
+          | Sie haben eine Idee für eine App, aber brauchen noch das technische Know-how? Mit uns als Agentur haben Sie dafür den richtigen Partner gefunden.
         
       div
         img.icon_quick_fix src="images/icon_mobile.svg"
@@ -36,11 +36,11 @@ div.uk-section#leistungen.n42-section-border
         img.icon_quick_fix src="images/icon_web.svg"
         h2 Web Entwicklung
         p
-          | Ob Webanwendungen mit durchdachter Usability, responsive Webseiten oder komplexe Backend-Systeme, wir finden für Sie genau die Lösung, die Sie brauchen.
+          | Webapplikationen mit durchdachter Usability, responsive Webseiten oder komplexe Backend-Systeme, wir finden für Sie genau die Lösung, die Sie brauchen.
         
     div.uk-child-width-1-1.uk-text-center
       a href="arbeitsweise.html"
-        button.uk-button.uk-button-primary.uk-margin.uk-button-large so arbeiten wir
+        button.uk-button.uk-button-primary.uk-margin.uk-button-large So arbeiten wir 
 
 div.uk-section.uk-section-muted#team.n42-section-border
   div.uk-container
@@ -137,49 +137,44 @@ div.uk-section.uk-section-muted#team.n42-section-border
         h3.uk-margin-small-top.uk-margin-bottom Johannes Mahr
 
     p.uk-margin-medium-top.uk-text-center
-      |  Wir sind Entwickler aus Leidenschaft. Für uns ist die Entwicklung von Web- und Mobile-Anwendungen nicht nur unser Beruf,
-      |  sondern unsere Berufung. Durch unsere kurzen Kommunikationswege können wir agil arbeiten und schnell auf Ihre Wünsche eingehen.
-      |  Wir sind vielfältig aufgestellt und jeder Mitarbeiter bringt seine individuellen Stärken mit ein.
-      |  Von der Beratung, der Kundenbetreuung über das Design bis hin zur Entwicklung gibt es bei uns für jeden Bereich mehrere Experten.
-      |  Wir begleiten Sie von der ersten Idee bis zur Veröffentlichung.
-      |  Wir verstehen uns als Teil Ihres Teams und nicht als externer Partner, der nur blind Aufgaben abarbeitet. Nur so klappt die Entwicklung digitaler Produkte.
-
+      |  Wir sind leidenschaftliche Appentwickler mit Sitz in Regensburg. Egal ob Sie eine Appagentur für eine Android, iOS oder Webanwendungen suchen, in unserem Team gibt es für jedes dieser Software-Gebiete erfahrene Experten.
+      |  Auf Ihrem Weg zu einer fertigen App begleiten wir Sie von Anfang an. Denn durch unsere jahrelangen Erfahrung können wir Ihnen auch in Sachen Beratung, Konzeption und Design zur Seite stehen.
+      
 div.uk-section.uk-section-muted#entwicklung.n42-section-border
   div.uk-container
     h1.uk-text-center.uk-margin-medium-bottom Entwicklung
-    .uk-grid (class="uk-child-width-1-1 uk-text-center uk-child-width-1-3@m")
+    .uk-grid class="uk-child-width-1-1 uk-text-center uk-child-width-1-3@m"
       div
         i.icon.ion-ios-gear-outline.n42-icons
         h2.uk-margin-remove-top Implementierung
         p.uk-margin-large-bottom.space-xl
-          | Ihr Produkt soll innovativ sein, also entwickeln wir auch so. Durch dynamisches Projektmanagement, unkomplizierte Kommunikation und der Nutzung neuester technologischer Standards machen wir für Sie und Ihr Produkt den Unterschied.
+          | Ihre App soll innovativ sein, also entwickeln wir auch so. Durch agiles Projektmanagement, unkomplizierte Kommunikation und der Nutzung neuester technologischer Standards, wie Swift und Kotlin, machen wir für Sie und Ihre App den Unterschied.
 
       div
         i.icon.ion-ios-analytics-outline.n42-icons
-        h2.uk-margin-remove-top Test
+        h2.uk-margin-remove-top Testing
         p.uk-margin-large-bottom.space-xl
-          | Vorsicht ist besser als Nachsicht. Das gilt auch bei uns, denn durch regelmäßiges, professionelles Testing noch während der Entwicklung sehen wir Probleme sofort – und lösen sie.
-
+          | Vorsicht ist besser als Nachsicht. Durch regelmäßiges und professionelles Testing Ihrer App, sowohl automatisiert, als auch manuell, sehen wir Probleme sofort – und lösen sie, bevor sie bei Ihren Endkunden auftreten.
       div
         i.icon.ion-ios-speedometer-outline.n42-icons
-        h2.uk-margin-remove-top Betrieb
+        h2.uk-margin-remove-top Wartung
         p.uk-margin-large-bottom.space-xl
-          | Mit uns ist Ihr Produkt auf dem neuesten Stand und bleibt es auch. Egal ob zusätzliche Anforderungen entstehen, technologische Weiterentwicklungen nötig sind oder Ihre Anwendung einfach einen neuen Anstrich braucht.
+          | Mit uns als Agentur ist Ihre App auf dem neuesten Stand - und bleibt es auch. Egal ob zusätzliche Anforderungen entstehen, technologische Weiterentwicklungen nötig sind oder Ihre App einfach einen neuen Anstrich braucht.
 
 
 div.uk-section.uk-text-center.n42-section-border
-  h1 Technologie
+  h1 Technologien
   .uk-container
     .uk-grid (class="uk-child-width-1-1 uk-child-width-1-3@m")
       div
         i.icon.ion-ios-world-outline.n42-icons
         h2.uk-margin-remove-top Web
-        p.uk-margin-large-bottom Wir realisieren Anwendungen mit Hilfe moderner Standards wie HTML5, Ember.js und Ruby on Rails.
+        p.uk-margin-large-bottom Wir realisieren Software mit Hilfe moderner Standards wie HTML5, Ember.js und Ruby on Rails. 
 
       div
         i.ion-social-apple-outline.n42-icons
         h2.uk-margin-remove-top iOS
-        p.uk-margin-large-bottom TODO Apple-Geräte versorgen wir mit nativen und hybriden iOS-Apps in Swift und HTML.
+        p.uk-margin-large-bottom Wir versorgen alle Apple-Geräte, vom kleinsten iPhone über das größte iPad bis hin zum AppleTV, mit nativen und hybriden iOS-Apps in Swift und React Native.
 
       div
         i.icon.ion-social-android-outline.n42-icons
@@ -220,7 +215,7 @@ section.uk-section.uk-text-center#kontakt.n42-section-border
   div.uk-container.uk-container-small.n42-container
     h1.n42-section-header Kontakt
     div.uk-margin
-      p Wenn wir Ihr Interesse geweckt haben, können Sie uns jederzeit Ihre Fragen stellen oder auch gleich ein unverbindliches und kostenloses Angebot anfordern. Wir melden uns schnellstmöglich bei Ihnen.
+      p Wenn wir Ihr Interesse geweckt haben, können Sie uns jederzeit kontaktieren. Wir beraten Sie gerne, erstellen Ihnen ein kostenloses Angebot oder vereinbaren einen unverbindlichen Termin mit Ihnen in unserem Regensburger Büro.
 
     div uk-grid='' class="uk-grid-medium uk-flex-center uk-child-width-1-4@l uk-child-width-1-3@s uk-child-width-1-1"
       div
