--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -137,9 +137,9 @@ div.uk-section.uk-section-muted#team.n42-section-border
         h3.uk-margin-small-top.uk-margin-bottom Johannes Mahr
 
     p.uk-margin-medium-top.uk-text-center
-      |  Auf Ihrem Weg zu einer fertigen App begleiten wir Sie von Anfang an. Denn durch unsere jahrelangen Erfahrung können wir Ihnen auch in Sachen Beratung, Konzeption und Design zur Seite stehen.
-      
       |  Wir sind leidenschaftliche Appentwickler mit Sitz in Regensburg. Egal ob Sie eine Appagentur für eine Android-, iOS- oder Webanwendungen suchen, in unserem Team gibt es für jedes dieser Software-Gebiete erfahrene Experten.
+      |  Auf Ihrem Weg zu einer fertigen App begleiten wir Sie von Anfang an. Denn durch unsere jahrelange Erfahrung können wir Ihnen auch in Sachen Beratung, Konzeption und Design zur Seite stehen.
+
 div.uk-section.uk-section-muted#entwicklung.n42-section-border
   div.uk-container
     h1.uk-text-center.uk-margin-medium-bottom Entwicklung
