Colon at the end

--- a/source/arbeitsweise.html.slim
+++ b/source/arbeitsweise.html.slim
@@ -13,8 +13,8 @@ div.uk-section.n42-section-border
     h1
       |Der Weg zu Ihrem Produkt
     p 
-      |Als Agentur mit langjähriger Erfahrung kennen wir die gängigen Probleme bei der Umsetzung von mobilen und webbasierten Apps. Es werden häufig umfassende Konzepte an uns herangetragen, die einer großen Vision entsprechen. Dass die technische Machbarkeit, das Budget und die Realisierungszeit den Projekterfolg stark beeinflussen, wird dabei oft außer Acht gelassen. Wir unterstützen Sie bereits bei der Analyse der Problemstellung dabei, die technische Machbarkeit von Anfang an in das Produkt einfließen zu lassen. Bei der Zusammenarbeit mit uns können Sie auf folgende Punkte setzen.
     ul  
+      |Als Agentur mit langjähriger Erfahrung kennen wir die gängigen Probleme bei der Umsetzung von mobilen und webbasierten Apps. Es werden häufig umfassende Konzepte an uns herangetragen, die einer großen Vision entsprechen. Dass die technische Machbarkeit, das Budget und die Realisierungszeit den Projekterfolg stark beeinflussen, wird dabei oft außer Acht gelassen. Wir unterstützen Sie bereits bei der Analyse der Problemstellung dabei, die technische Machbarkeit von Anfang an in das Produkt einfließen zu lassen. Bei der Zusammenarbeit mit uns können Sie auf folgende Punkte setzen:
       li Gemeinsame Workshops
       li Minimum Viable Product
       li Agile Arbeitsweise
