ihr -> Ihr and similar

--- a/source/arbeitsweise.html.slim
+++ b/source/arbeitsweise.html.slim
@@ -13,8 +13,8 @@ div.uk-section.n42-section-border
     h1
       |Der Weg zu Ihrem Produkt
     p 
-    ul  
       |Als Agentur mit langjähriger Erfahrung kennen wir die gängigen Probleme bei der Umsetzung von mobilen und webbasierten Apps. Es werden häufig umfassende Konzepte an uns herangetragen, die einer großen Vision entsprechen. Dass die technische Machbarkeit, das Budget und die Realisierungszeit den Projekterfolg stark beeinflussen, wird dabei oft außer Acht gelassen. Wir unterstützen Sie bereits bei der Analyse der Problemstellung dabei, die technische Machbarkeit von Anfang an in das Produkt einfließen zu lassen. Bei der Zusammenarbeit mit uns können Sie auf folgende Punkte setzen:
+    ul
       li Gemeinsame Workshops
       li Minimum Viable Product
       li Agile Arbeitsweise
@@ -24,7 +24,7 @@ div.uk-section.n42-section-border
     div.uk-grid.uk-flex.uk-flex-middle class="uk-child-width-1-2@s uk-child-width-1-1"
       div
         h2 Gemeinsame Workshops
-        p Wir erarbeiten zusammen mit Ihnen ihr Konzept entweder in unserem Regensburger Büro oder bei Ihnen vor Ort. Das Konzept besteht aus einer groben Produkt-Roadmap, die in möglichst kleinen Schritten nutzbare Zwischenergebnisse, das Minimum Viable Product, liefert. Darüber hinaus entstehen erste Entwürfe der Bedienoberflächen des Produktes als Grundlage für ein gemeinsames Produkt-Verständnis.
+        p Wir erarbeiten zusammen mit Ihnen Ihr Konzept entweder in unserem Regensburger Büro oder bei Ihnen vor Ort. Das Konzept besteht aus einer groben Produkt-Roadmap, die in möglichst kleinen Schritten nutzbare Zwischenergebnisse, das Minimum Viable Product, liefert. Darüber hinaus entstehen erste Entwürfe der Bedienoberflächen des Produktes als Grundlage für ein gemeinsames Produkt-Verständnis.
       div.uk-padding
         =image_tag "images/DELETEME.svg"
 
@@ -32,7 +32,7 @@ div.uk-section.n42-section-border
     div.uk-grid.uk-flex.uk-flex-middle class="uk-child-width-1-2@s uk-child-width-1-1"
       div
         h2 Minimum Viable Product
-        p Braucht es wirklich eine fertige App oder reicht für Ihren Anwendungsfall vielleicht auch ein Prototyp? Müssen schon alle Funktionen enthalten sein, oder darf es auch ein bisschen weniger sein? Und dann vielleicht noch ein bisschen weniger? Das beschreibt grob das Konzept Minimum Viable Produkt. Es geht darum, ein Produkt zu veröffentlichen, aber nur mit einem minimalen Umfang an Funktionalität. Oft können Sie so schon schnell erkennen, ob Ihr Produkt am Markt ankommt und was verändert werden muss. So sparen Sie sich unnötige Kosten. Features können dann jeder Zeit in Iterationen nachgezogen werden
+        p Braucht es wirklich eine fertige App oder reicht für Ihren Anwendungsfall vielleicht auch ein Prototyp? Müssen schon alle Funktionen enthalten sein, oder darf es auch ein bisschen weniger sein? Und dann vielleicht noch ein bisschen weniger? Das beschreibt grob das Konzept Minimum Viable Produkt. Es geht darum, ein Produkt zu veröffentlichen, aber nur mit einem minimalen Umfang an Funktionalität. Oft können Sie so schon schnell erkennen, ob Ihr Produkt am Markt ankommt und was verändert werden muss. So sparen Sie sich unnötige Kosten. Features können dann jederzeit in Iterationen nachgezogen werden
       div.uk-padding
         =image_tag "images/DELETEME.svg"
         
@@ -47,6 +47,6 @@ div.uk-section.n42-section-border
     div.uk-grid.uk-flex.uk-flex-middle class="uk-child-width-1-2@s uk-child-width-1-1"
       div
         h2 Zeitbudgets statt Meilensteine
-        p Für uns hat sich über die Jahre bewährt nicht mit Meilensteinen zu arbeiten sondern mit Zeitbudgets. Meilensteine mit fest definierten Produktumfang sind nicht agil. Verschätzt man sich mit dem Aufwand verschiebt sich der Release oft nach hinten, was weitere Konsequenzen mit sich zieht. Bei der Planung des Projektablaufs setzen wir daher auf Zeitbudgets. In Kombination mit dem Minimum Viable Product können wir so garantieren, dass mit jeder Iteration der Wert und Umfang ihrer App steigt. Funktionalitäten, die innerhalb des Zeitbudgets implementiert und getestet werden, gelangen dabei in nächsten planmäßigen Release.
+        p Für uns hat sich über die Jahre bewährt nicht mit Meilensteinen zu arbeiten sondern mit Zeitbudgets. Meilensteine mit fest definiertem Produktumfang sind nicht agil. Verschätzt man sich mit dem Aufwand verschiebt sich der Release oft nach hinten, was weitere Konsequenzen nach sich zieht. Bei der Planung des Projektablaufs setzen wir daher auf Zeitbudgets. In Kombination mit dem Minimum Viable Product können wir so garantieren, dass mit jeder Iteration der Wert und Umfang Ihrer App steigt. Funktionalitäten, die innerhalb des Zeitbudgets implementiert und getestet werden, werden Teil des nächsten planmäßigen Release.
       div.uk-padding
         =image_tag "images/DELETEME.svg"
