--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -22,18 +22,7 @@ html lang="en" prefix="og: http://ogp.me/ns#"
     = javascript_include_tag "https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js", "https://oss.maxcdn.com/respond/1.4.2/respond.min.js"
 
   script type="application/ld+json"
-    |
-      {
-        "@context": "http://schema.org",
-        "@type": "Organization",
-        "url": "https://www.number42.de/",
-        "logo": "https://www.number42.de/images/logo.png",
-        "contactPoint": [{
-          "@type": "sales",
-          "telephone": "+49-941-20000870",
-          "contactType": "customer service"
-        }]
-      }
+    = current_page.data['structuredData']
 
   body class=page_classes
     div.uk-offcanvas-content
