add first draft of Dienstleistungen

--- a/source/_nav.html.slim
+++ b/source/_nav.html.slim
@@ -22,6 +22,8 @@ nav.uk-navbar.uk-navbar-container.n42-navbar uk-navbar='' uk-sticky=''
         = link_to "Blog", "/blog/index.html"
       li
         = link_to 'Kontakt', "/#kontakt"
+      li
+        = link_to 'Dienstleistungen', "/dienstleistungen.html#services"
 
 #offcanvas-slide uk-offcanvas="overlay: true; flip: true;"
   .uk-offcanvas-bar
@@ -40,3 +42,5 @@ nav.uk-navbar.uk-navbar-container.n42-navbar uk-navbar='' uk-sticky=''
         = link_to "Blog", "/blog/index.html"
       li
         = link_to 'Kontakt', "/#kontakt"
+      li
+        = link_to 'Dienstleistungen', "/dienstleistungen.html#services"
