--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -46,6 +46,8 @@ nav.uk-navbar.uk-navbar-container.n42-navbar uk-navbar='' uk-sticky=''
       li
         a href="#kontakt" uk-scroll='duration: 350; offset: 50'
           | Kontakt
+      li
+        =link_to "Dienstleistungen", "/dienstleistungen.html#services"
 #offcanvas-slide uk-offcanvas="overlay: true; flip: true;"
   .uk-offcanvas-bar
     ul.uk-nav.uk-nav-default.collapsable#nav
@@ -67,6 +69,8 @@ nav.uk-navbar.uk-navbar-container.n42-navbar uk-navbar='' uk-sticky=''
       li
         a href="#kontakt" uk-scroll='duration: 350; offset: 50'
           | Kontakt
+      li
+        = link_to "Dienstleistungen", "/dienstleistungen.html#services"
 
 div.uk-cover-container.n42-height-large.n42-red-border.n42-hero
   div#cover
