add drafts for pictures

--- a/source/dienstleistungen.html.slim
+++ b/source/dienstleistungen.html.slim
@@ -32,7 +32,7 @@ div.uk-section.uk-section-muted.n42-section-border.uk-padding
 
 
     div.uk-container.uk-align-center
-      =image_tag "images/dienstleistungen.jpeg"
+      =image_tag "images/services.JPG"
 
 
 
@@ -40,7 +40,7 @@ div.uk-section.n42-section-border
     div.uk-container
 
       <a name="iosapps"></a>
-      <img src="/images/iosapps.png" alt="iosapps" uk-align-center>
+      <img src="/images/iosandrapp.JPG" alt="iosapps" uk-align-center>
 
 
       article.uk-article.uk-text-center.uk-margin
@@ -50,12 +50,23 @@ div.uk-section.n42-section-border
           <a href="https://www.google.com/search?source=hp&ei=ZvtOW6mZAdH9kwXfoa3oDw&q=iOS&oq=iOS&gs_l=psy-ab.3..0i131k1j0l3j0i131k1j0l5.1120.1502.0.2159.3.3.0.0.0.0.57.163.3.3.0....0...1c.1.64.psy-ab..0.3.163....0.9nJV-uuKOm0">iOS </a>-App fürs Smartphone.
           Sie entscheiden wie die App aussehen und welche Funktionen sie haben soll. Wir übernehmen den Rest.
 
+div.uk-section.n42-section-border
+    div.uk-container
+
+      <a name="androidapps"></a>
+      <img src="/images/iosandrapp.JPG" alt="androidapps" uk-align-center>
+
+
+      article.uk-article.uk-text-center.uk-margin
+        h1.uk-article-title Android - Apps
+        p.uk-text-lead Natürlich bieten wir auch Apps für Android- Smartphones an. Wir programmieren Ihre App in Java oder Kotlin.
+
 
 div.uk-section.uk-section-muted.n42-section-border
     div.uk-container
 
       <a name="webdevelopment"></a>
-      <img src="/images/webdev.jpg" alt="webdevelopment" uk-align-center>
+      <img src="/images/webapp.JPG" alt="webdevelopment" uk-align-center>
 
     article.uk-article.uk-text-center.uk-margin
       h1.uk-article-title Web-App
@@ -75,11 +86,11 @@ div.uk-section.n42-section-border
 
             ul.uk-slideshow-items
               <li>
-                <img data-src="/images/bild1.jpeg" alt="" uk-cover uk-img="target: !ul > :last-child, !* +*">
+                <img data-src="/images/progress.JPG" alt="" uk-cover uk-img="target: !ul > :last-child, !* +*">
               <li>
-                <img data-src="/images/bild2.jpeg" alt="" uk-cover uk-img="target: !* -*, !* +*">
+                <img data-src="/images/progress.JPG" alt="" uk-cover uk-img="target: !* -*, !* +*">
               <li>
-                <img data-src="/images/bild3.jpeg" alt="" uk-cover uk-img="target: !* -*, !ul > :first-child">
+                <img data-src="/images/progress.JPG" alt="" uk-cover uk-img="target: !* -*, !ul > :first-child">
 
 
 
@@ -101,8 +112,7 @@ div.uk-section.n42-section-border
           <a href="https://de-de.facebook.com/number42de/" uk-icon="icon: facebook"></a>
           <a href="https://twitter.com/Number42Apps" uk-icon="icon: twitter"></a>
           <a href="https://www.instagram.com/number42_de/?hl=de" uk-icon="icon: instagram"></a>
-          <a href="https://www.youtube.com" uk-icon="icon: youtube"></a>
-
+          <a href="https://medium.com/number42de" uk-icon="icon: pencil"></a>
 
 
 
