--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -6,7 +6,7 @@ html lang="en" prefix="og: http://ogp.me/ns#"
     meta content="width=device-width, initial-scale=1" name="viewport"
     link rel="shortcut icon" href="#{image_path('favicon.png')}"
     link rel="alternate" type="application/rss+xml" title="Number42 Blog" href="https://www.number42.de/blog/feed.xml"
-
+    link rel="apple-touch-icon" sizes="any" href="/images/logo.png"
     title= current_page.data.title || "Number42"
     - if current_page.data.robots.present?
       meta name="robots" content=current_page.data.robots
