--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -6,6 +6,18 @@ html lang="en" prefix="og: http://ogp.me/ns#"
     meta content="width=device-width, initial-scale=1" name="viewport"
     link rel="shortcut icon" href="#{image_path('favicon.png')}"
     link rel="alternate" type="application/rss+xml" title="Number42 Blog" href="https://www.number42.de/blog/feed.xml"
+    /! Mask icon
+    link rel="mask-icon" sizes="any" href="/images/n42-logo-icon_black.svg" color="#D24335"
+    /! Touch icons
+    /! apple
+    link rel="apple-touch-icon" sizes="180x180" href="/images/n42-logo-icon180.png"
+    /! android
+    link rel="apple-touch-icon-precomposed" sizes="196x196" href="/images/n42-logo-icon196.png"
+    /! windows
+    meta name="msapplication-square70x70logo" content="/images/n42-logo-icon128.png"
+    meta name="msapplication-square150x150logo" content="/images/n42-logo-icon270.png"
+    meta name="msapplication-wide310x150logo" content="/images/n42-logo-icon558.png"
+    meta name="msapplication-square310x310logo" content="/images/n42-logo-icon558.png"
 
     title= current_page.data.title || "Number42"
     - if current_page.data.robots.present?
